test/fails/bad_tags/mult3.lgl
tag a is vec2;

a x = [1., 1.];
vec2->a v2_a = [[1., 1.], [1., 1.]];
vec2 bad = v2_a * x; // Out of order

vec2 s12 = x + x2;
vec2 s13 = (x * 2.) + ([1., 2.] * 1.) - [1., 2.];
vec3 s14 = y - [1., 2., 3.] + z;
vec3 s15 = y + z - z - y;
//vec3 s16 = z .* y + [1., 2., 3.];
vec3 s17 = z + z2;
vec3 s18 = z + z2;